add favicon icon

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
+  <link rel="shortcut icon" href="video-calling.png" type="image/x-icon">
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>React & Tailwind CSS Starter Pack</title>
+  <title>Video Calling App</title>
 </head>
 
 <body>
